<resources>
    <string name="app_name">ID Voice</string>
    <string name="biometrics_made_simple">Biometrics made simple</string>
    <string name="enroll">Enroll</string>
    <string name="verify">Verify</string>
    <string name="back">Back</string>
    <string name="record">Record</string>
    <string name="verification">Verification</string>
    <string name="need_permissions">For correct work application need permission</string>
    <string name="ok">OK</string>
    <string name="permission_record_audio_rationale">record audio</string>
    <string name="recording">Recording&#8230;</string>
    <string name="stop">Stop</string>
    <string name="antispoofing">Antispoofing</string>
    <string name="statistics">Statistics</string>
    <string name="enroll_first">Please enroll first</string>
    <string name="verification_successfull">Verification: successful\nVerification result: %f%%</string>
    <string name="verification_failed">Verification: failed\nVerification result: %f%%</string>
    <string name="antispoofing_successfull">Antispoofing: successful\nAntispoofing result: %f%%</string>
    <string name="antispoofing_failed">Antispoofing: failed\nAntispoofing result: %f%%</string>
    <string name="enrollment_done">Enrollment was successfully completed!</string>
    <string name="recording_done">Recording #%d was successfully completed!</string>
    <string name="speech_amount">Speech amount</string>
    <string name="phrase">Los Angeles Lakers</string>
</resources>
